--- a/Facebook_Featurization.ipynb
+++ b/Facebook_Featurization.ipynb
@@ -1257,6 +1257,24 @@
     "xtrain.to_csv('datasets/my/featured_train.csv')\n",
     "xtest.to_csv('datasets/my/featured_test.csv')"
    ]
+  },
+  {
+   "source": [
+    "# Extra Features"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "\n",
+    "1. Add another feature called  Preferential Attachment  with followers and followees data of vertex. you can check about Preferential Attachment in below link\n",
+    "http://be.amazd.com/link-prediction/ <br>\n",
+    "2. Add  feature called svd_dot. you can calculate svd_dot as Dot product between sourse node svd and destination node svd features.  you can read about this in below pdf \n",
+    "https://storage.googleapis.com/kaggle-forum-message-attachments/2594/supervised_link_prediction.pdf<br>"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ]
 }
